--- a/options.html
+++ b/options.html
@@ -20,7 +20,10 @@
             <h1>機率</h1>
             <textarea name="percent" id="percent" cols="50" rows="30"></textarea>
         </div>
-        <h1 id="state">ddssd</h1>
+        <div>
+            <h1 id="state">ddssd</h1>
+            <input type="text" id="idddd">
+        </div>
     </div>
     <script src="options.js"></script>
 
