--- a/setting.html
+++ b/setting.html
@@ -27,12 +27,14 @@
             </div>
         </div>
         <div class="small">
-            <h1>標籤</h1>
-            <textarea name="name" id="name" cols="40" rows="30"></textarea>
-        </div>
-        <div class="small">
-            <h1>機率</h1>
-            <textarea name="percent" id="percent" cols="40" rows="30"></textarea>
+            <div>
+                <h1>標籤</h1>
+                <textarea name="name" id="name" cols="40" rows="30"></textarea>
+            </div>
+            <div>
+                <h1>機率</h1>
+                <textarea name="percent" id="percent" cols="40" rows="30"></textarea>
+            </div>
         </div>
     </div>
     <script src="setting.js"></script>
