modified:   background.js 	modified:   content.js 	modified:   options.js 	modified:   setting.css 	modified:   setting.html 	modified:   setting.js

--- a/setting.html
+++ b/setting.html
@@ -20,11 +20,15 @@
             <div class="dafs btn">
                 <button id="getD">get</button>
                 <button id="changeD">change</button>
+                <button id="DDD">delete</button>
                 <label class="switch">
                     <input type="checkbox" data-Myclass="sleeping" id="switch">
                     <span class="slider round"></span>
                 </label>
             </div>
+            <ul id="OnLine">
+
+            </ul>
         </div>
         <div class="small">
             <div>
