--- a/options.html
+++ b/options.html
@@ -10,6 +10,9 @@
 
 <body>
     <!-- <input type="text" id="in"> -->
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
 
     <div class="dafs">
         <div>
